examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error, 1 note • examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx
// error[E300]: Parameter Type Mismatch
//
// Parameter 1 has the wrong type.
//
//   examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx:44:5
//    |
// 44 |     run_needs_io_time(pure_worker)
//    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//    |     ------------------------------ parameter 1 has type `() -> Unit`
//
//    |     ------------------------------ this type mismatch is reported here
//
// Note:
//   expected parameter type: () -> Unit with Console, FileSystem, Stdin, Clock
//   found parameter type: () -> Unit
//   the conflicting types meet at this expression
//
// Help:
//   Change parameter 1 to use `() -> Unit with Console, FileSystem, Stdin, Clock` consistently.
//
//
// Note: Downstream Errors Suppressed
//
// I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

// E422: missing-effect list is deterministic and sorted.

fn run_needs_io_time(f: (() -> Int with IO, Time)) -> Int with IO, Time {
    f()
}

fn pure_worker() -> Int {
    0
}

fn main() with IO, Time {
    run_needs_io_time(pure_worker)
    print("done")
}
